feat: added warning if users change savings after changing parameter values; added affected fuel tab

--- a/micat/src/assets/main.css
+++ b/micat/src/assets/main.css
@@ -9,9 +9,19 @@
 @tailwind utilities;
 
 html {
-  @apply text-gray-700
+  @apply text-gray-700;
 }
 
-html, body, #app {
+html,
+body,
+#app {
   height: 100%;
+}
+
+.tooltip {
+  @apply absolute invisible;
+}
+
+.has-tooltip:hover .tooltip {
+  @apply z-50 visible;
 }
